--- a/test/fixtures/registrations.yml
+++ b/test/fixtures/registrations.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  event_id: 1
-  user_id: 1
+  event_id: 298486374
+  user_id: 298486374
 
 two:
-  event_id: 1
-  user_id: 1
+  event_id: 980190962
+  user_id: 298486374
